--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,14 @@
 .font-img{
   height: 10vw;
   width: 10vw;
+  border: none;
 }
 #messege{
   font-size: 6vh;
   text-align: center;
   width: 100%;
+  font-family: sans-serif;
+  color: rgb(136, 127, 255);
 }
 #reset-btn{
   background-color: rgb(37, 20, 20);
